--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -42,7 +42,7 @@
                   <div id="me"></div>
                 </div>
                 <div class="col-sm-6">
-                    <p class="info">With my degree in Graphic Design and previous work for a research project developing medical artificial intelligence, I have gained a strong appreciation of technology and the impact it has on our lives; visually and practically. Working alongside research scientists and engineers made me realise that I not only wanted to be the one providing information but using it in order to create. It was this extraordinary collaboration that inspired me to change the direction of my life and throw myself into coding. I’m excited about the future of my learning and hope to once again work with inspiring individuals who share the same positivity and desire to make an impact on the lives of others through design and tech.</p>
+                    <p class="info">With my degree in Graphic Design and previous work for a research project developing medical artificial intelligence, I have gained a strong appreciation of technology and the impact it has on our lives; visually and practically. Working alongside research scientists and engineers made me realise that I not only wanted to be the one providing information but using it in order to create. It was this extraordinary collaboration that inspired me to change the direction of my life and throw myself into coding. I’m excited about the future of my learning and hope to once again work with inspiring individuals who share the same positivity and desire to make an impact on the lives of others through design and tech. Oh, I'm also a part time swing dancing teacher so if you fancy learning the charleston or some lindy hop, send me a message!</p>
                 </div>
               </div>
             </div>
@@ -51,21 +51,34 @@
 
         <section id="projects">
           <h2>Projects</h2>
+
+
           <div class="container">
             <div class="row">
               <div class="col-sm-3">
-                <div class="image image-one"></div>
-                <button class="btn" type="button" name="button">Live demo</button>
-                <button class="btn" type="button" name="button">source code</button>
+                <div class="image image-one"><a href="project1.ejs"></a></div>
+                <%# <p class="info">A simplistic ‘whack a mole’ style game that encompasses my love of 90’s film and retro gaming. Built using HTML5, CSS3, JavaScript and jQuery.</p>%>
+                  <button onclick="window.open('https://aqueous-savannah-14359.herokuapp.com')" class="btn" type="button" name="button">Live demo</button>
+                  <button onclick="window.open('https://github.com/arrianne/project1')" class="btn" type="button" name="button">source code</button>
               </div>
               <div class="col-sm-3">
                 <div class="image image-two"></div>
+                <%# <p class="info">From my previous work with diabetic patients, I decided to focus my final project on the ever growing need for diabetic appointment planning. This simple icon based application can help patients keep on top of appointments thus reducing the risk of further complications and cost to the NHS.
+                This application was created using Rails and Angular. It utilises Adobe Illustrator (for the icon design), Google Maps API, CityMapper and iCal.</p>%>
+                <button onclick="window.open('https://stormy-waters-99766.herokuapp.com/')" class="btn" type="button" name="button">Live demo</button>
+                <button onclick="window.open('https://github.com/arrianne/project-4-api')" class="btn" type="button" name="button">source code</button>
               </div>
               <div class="col-sm-3">
                 <div class="image image-three"></div>
+                <%# <p class="info">From my love of lindy hop and using dance videos as a reference for my own learning came ‘Vindy’, a full stack Restful application. It utilises the Youtube API in order to search and collate videos for future reference. It was built using HTML5, CSS3, Node.js, ES6, Tokens, AJAX, JSON, Express, Gulp. Eventually, I would like to make it more sociable and allow users to share their video collections with friends.</p>%>
+                <button onclick="window.open('https://mighty-fortress-62955.herokuapp.com/')" class="btn" type="button" name="button">Live demo</button>
+                <button onclick="window.open('https://github.com/arrianne/vindy-node-app')" class="btn" type="button" name="button">source code</button>
               </div>
               <div class="col-sm-3">
                 <div class="image image-three"></div>
+                <%# <p class="info">This collaborative project is a full Restful application that relies on user submissions to measure homelessness against available resources in London. HTML 5, Sass, Angular, AJAX, Node.js, Mongoose, Mongo, Bootstrap and Google Maps API were used to create this application. I was mainly responsible for collating information for the seeds file and creating and designing the forms. We would like to add a way of mapping the collected data across time, so any increase or decrease of homelessness in certain areas can be clearly communicated.</p>%>
+                <button onclick="window.open('https://mysterious-beach-72095.herokuapp.com')" class="btn" type="button" name="button">Live demo</button>
+                <button onclick="window.open('https://github.com/GiacomoBrunetti/WDI25-Project-3-')" class="btn" type="button" name="button">source code</button>
               </div>
             </div>
           <img src="../assets/images/arrow3.png" id="arrow3" href="#contact" alt="">
