--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -56,23 +56,27 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-3">
-                <div class="image image-one"><a href="project1.ejs"></a></div>
-                <%# <p class="info">A simplistic ‘whack a mole’ style game that encompasses my love of 90’s film and retro gaming. Built using HTML5, CSS3, JavaScript and jQuery.</p>%>
-                  <button onclick="window.open('https://aqueous-savannah-14359.herokuapp.com')" class="btn" type="button" name="button">Live demo</button>
-                  <button onclick="window.open('https://github.com/arrianne/project1')" class="btn" type="button" name="button">source code</button>
+                <div class="image image-four"></div>
+                <%# <p class="info">From my love of lindy hop and using dance videos as a reference for my own learning came ‘Vindy’, a full stack Restful application. It utilises the Youtube API in order to search and collate videos for future reference. It was built using HTML5, CSS3, Node.js, ES6, Tokens, AJAX, JSON, Express, Gulp. Eventually, I would like to make it more sociable and allow users to share their video collections with friends.</p>%>
+                <button onclick="window.open('https://mighty-fortress-62955.herokuapp.com/')" class="btn" type="button" name="button">Live demo</button>
+                <button onclick="window.open('https://github.com/arrianne/vindy-node-app')" class="btn" type="button" name="button">source code</button>
+
               </div>
               <div class="col-sm-3">
-                <div class="image image-two"></div>
+                <div class="image image-two2"></div>
                 <%# <p class="info">From my previous work with diabetic patients, I decided to focus my final project on the ever growing need for diabetic appointment planning. This simple icon based application can help patients keep on top of appointments thus reducing the risk of further complications and cost to the NHS.
                 This application was created using Rails and Angular. It utilises Adobe Illustrator (for the icon design), Google Maps API, CityMapper and iCal.</p>%>
                 <button onclick="window.open('https://stormy-waters-99766.herokuapp.com/')" class="btn" type="button" name="button">Live demo</button>
                 <button onclick="window.open('https://github.com/arrianne/project-4-api')" class="btn" type="button" name="button">source code</button>
               </div>
               <div class="col-sm-3">
-                <div class="image image-three"></div>
-                <%# <p class="info">From my love of lindy hop and using dance videos as a reference for my own learning came ‘Vindy’, a full stack Restful application. It utilises the Youtube API in order to search and collate videos for future reference. It was built using HTML5, CSS3, Node.js, ES6, Tokens, AJAX, JSON, Express, Gulp. Eventually, I would like to make it more sociable and allow users to share their video collections with friends.</p>%>
-                <button onclick="window.open('https://mighty-fortress-62955.herokuapp.com/')" class="btn" type="button" name="button">Live demo</button>
-                <button onclick="window.open('https://github.com/arrianne/vindy-node-app')" class="btn" type="button" name="button">source code</button>
+
+
+                <div class="image image-one"><a href="project1.ejs"></a></div>
+                <%# <p class="info">A simplistic ‘whack a mole’ style game that encompasses my love of 90’s film and retro gaming. Built using HTML5, CSS3, JavaScript and jQuery.</p>%>
+                  <button onclick="window.open('https://aqueous-savannah-14359.herokuapp.com')" class="btn" type="button" name="button">Live demo</button>
+                  <button onclick="window.open('https://github.com/arrianne/project1')" class="btn" type="button" name="button">source code</button>
+
               </div>
               <div class="col-sm-3">
                 <div class="image image-three"></div>
@@ -89,22 +93,22 @@
               <h2>Contact</h2>
               <div class="container">
                 <div class="row">
-                  <div class="col-sm-2">
+                  <%# <div class="col-sm-2">%>
                     <a href="mailto:hello@arrianne.co.uk" target="_blank">
                     <img class="icon" border="0" alt="email" src="../assets/images/emailicon.png" width="100" height="100">
-                  </div>
-                  <div class="col-sm-2">
+                  <%# </div>%>
+                  <%# <div class="col-sm-2">%>
                     <a href="https://github.com/arrianne" target="_blank">
                     <img class="icon" border="0" alt="github" src="../assets/images/githubicon.png" width="100" height="100">
-                  </div>
-                  <div class="col-sm-2">
+                  <%# </div>%>
+                  <%# <div class="col-sm-2">%>
                     <a href="https://www.linkedin.com/in/arrianne/" target="_blank">
                     <img class="icon" border="0" alt="linkedin" src="../assets/images/linkedinicon.png" width="100" height="100">
-                  </div>
-                  <div class="col-sm-2">
+                  <%# </div>%>
+                  <%# <div class="col-sm-2">%>
                     <a href="https://twitter.com/Arrianne0" target="_blank">
                     <img class="icon" border="0" alt="twitter" src="../assets/images/twitter-icon.png" width="100" height="100">
-                  </div>
+                  <%# </div>%>
                 </div>
               </div>
             </div>
