removing part of heading

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,7 +29,7 @@
     <main>
       <section id="title">
         <h1>Arrianne</h1>
-        <p>Developer | Designer | Dancer</p>
+        <p>Developer | Designer</p>
         <img src="../assets/images/arrow1.png" id="arrow1" href="#about" alt="">
       </section>
       <div class="container">
